--- a/src/common/css/icon.scss
+++ b/src/common/css/icon.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'mt-app';
-  src:  url('fonts/mt-app.eot?59yr3l');
-  src:  url('fonts/mt-app.eot?59yr3l#iefix') format('embedded-opentype'),
-    url('fonts/mt-app.ttf?59yr3l') format('truetype'),
-    url('fonts/mt-app.woff?59yr3l') format('woff'),
-    url('fonts/mt-app.svg?59yr3l#mt-app') format('svg');
+  src:  url('../fonts/mt-app.eot?59yr3l');
+  src:  url('../fonts/mt-app.eot?59yr3l#iefix') format('embedded-opentype'),
+  url('../fonts/mt-app.ttf?59yr3l') format('truetype'),
+  url('../fonts/mt-app.woff?59yr3l') format('woff'),
+  url('../fonts/mt-app.svg?59yr3l#mt-app') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
